--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
+      - name: Install PM2 globally
+        run: npm install -g pm2
       - run: pm2 restart api
       - run: |
           touch .env
