--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
-      - run: npm run build --if-present
-      - run: pm2 restart api
+      - name: Install PM2 globally
+        run: npm install -g pm2
+      - name: Start or Restart PM2 Process
+        run: |
+          pm2 describe api || pm2 start npm --name api -- run start
+          pm2 restart api
       - run: |
           touch .env
           echo "${{ secrets.MONGO_DB_URL }}" > .env
